sumo/tests/traci/StopNode/InvalidNode/options.traci
sumo.exe --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8824 --netstate-dump netstate_dump.xml TraCITestClient.exe -def stopnode_invalidnode.prog -p 8824 -h localhost -o testclient_out.txt